--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script defer src="assets/script.js"></script>
 </head>
 <body>
+  <h1>librtlsdr Dongle Validator</h1>
   <button id="request-device">Select USB Device</button>
   <div id="result"></div>
 </body>
