Add link to GitHub repo from website

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <h1>librtlsdr Dongle Validator</h1>
   <button id="request-device">Select USB Device</button>
   <div id="result"></div>
+  <p>
+    <a href="https://github.com/watson/librtlsdr-dongle-validator">GitHub repo</a>
+  </p>
 </body>
 </html>
