Add link to the librtlsdr library

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <h1>librtlsdr Dongle Validator</h1>
-  <p>A website for testing USB device compatibility with the librtlsdr library.</p>
+  <p>A website for testing USB device compatibility with the <a href="https://github.com/steve-m/librtlsdr">librtlsdr</a> library.</p>
   <button id="request-device">Select USB Device</button>
   <div id="result"></div>
 
